feat: add user setting json
